# yast-product-creator

./: .cvsignore  .gitignore  .travis.yml  Dockerfile  MAINTAINER  README.md  RPMNAME  VERSION  yast2-product-creator.spec.in
agent-kiwi/: Makefile.am  ag_kiwi  kiwi.scr
agents/: Makefile.am  etc_kiwi_repoalias.scr
data/: HFS_mapping  Makefile.am  message
data/kiwi_templates/: Makefile.am
data/kiwi_templates/iso/: config.sh  config.xml
data/kiwi_templates/iso/root/etc/init.d/: create_xconf
data/kiwi_templates/xen/: config.sh
doc/: Makefile.am  README  README.expert
package/: yast2-product-creator.changes  yast2-product-creator.spec
scripts/: Makefile.am  y2mkiso
src/: .cvsignore  Kiwi.ycp  Makefile.am  ProductCreator.ycp  SourceDialogsLite.ycp  commandline.ycp  complex.ycp  dialogs.ycp  helps.ycp  image-creator.desktop  image-creator.ycp  kiwi.desktop  kiwi.ycp  kiwi_dialogs.ycp  product-creator.desktop  product-creator.ycp  routines.ycp  wizards.ycp
src/clients/: image-creator.rb  image-creator.ycp  kiwi.rb  product-creator.rb
src/data/: Makefile.am  isolinux.cfg  sysconfig.product-creator
src/data/kiwi_templates/: Makefile.am
src/data/kiwi_templates/iso/: Makefile.am  config.sh  config.xml
src/data/kiwi_templates/iso/root/: Makefile.am
src/data/kiwi_templates/iso/root/etc/: Makefile.am
src/data/kiwi_templates/iso/root/etc/init.d/: Makefile.am  create_xconf
src/data/kiwi_templates/iso/root/etc/sysconfig/: Makefile.am
src/data/kiwi_templates/iso/root/etc/sysconfig/network/: Makefile.am
src/data/kiwi_templates/xen/: Makefile.am  config.xml
src/data/kiwi_templates/xen/root/: Makefile.am
src/data/kiwi_templates/xen/root/etc/: Makefile.am
src/data/kiwi_templates/xen/root/etc/init.d/: Makefile.am
src/data/kiwi_templates/xen/root/etc/sysconfig/: Makefile.am
src/data/kiwi_templates/xen/root/etc/sysconfig/network/: Makefile.am
src/desktop/: image-creator.desktop  product-creator.desktop
src/include/product-creator/: commandline.rb  commandline.ycp  complex.rb  complex.ycp  dialogs.rb  dialogs.ycp  helps.rb  kiwi_dialogs.rb  routines.rb  routines.ycp  wizards.rb  wizards.ycp
src/modules/: Kiwi.rb  ProductCreator.rb  ProductCreator.ycp
src/scrconf/: cfg_product-creator.scr
test/: product_creator_test.rb  test_helper.rb
