#
# Makefile.am for product-creator/kiwi_templates
#

ydatadir = @ydatadir@/product-creator/kiwi_templates

nobase_dist_ydata_DATA =	\
        iso/config.xml \
        iso/root/etc/sysconfig/displaymanager \
        iso/root/etc/sysconfig/network/ifcfg-eth0 \
        xen/config.xml \
        xen/root/etc/sysconfig/network/ifcfg-eth0 \
        xen/root/etc/sysconfig/keyboard

nobase_dist_ydata_SCRIPTS =	\
        iso/config.sh \
        iso/root/etc/init.d/create_xconf \
        xen/config.sh \
        xen/root/etc/init.d/boot.xen

